Style: fix option font color visibility in dropdown lists on Windows/Chrome

--- a/static/style.css
+++ b/static/style.css
@@ -300,6 +300,11 @@ body {
     font-family: inherit;
 }
 
+.form-group select option {
+    background-color: #1a202c;
+    color: #fff;
+}
+
 .form-group input:focus,
 .form-group select:focus {
     outline: none;
